Tests/typing/bad/testfile-struct-3.jl

struct S a end
struct T b end
function f(x::T) x.a end
